--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -106,8 +106,8 @@
             </select>
         </div>
         <div class="mb-3">
-            <label for="billingMonth" class="form-label">Duração da cobrança (em meses)</label>
-            <select id="billingMonth" class="form-control" [(ngModel)]="selectedSignature.billingMonth" name="billingMonth"
+            <label for="monthDuration" class="form-label">Duração da cobrança (em meses)</label>
+            <select id="monthDuration" class="form-control" [(ngModel)]="selectedSignature.monthDuration" name="monthDuration"
                 required>
                 <option *ngFor="let month of monthsOfYear" [value]="month">{{ month }}</option>
             </select>
