feat: adiciona na tela os gastos totais e gastos mensais das assinaturas

--- a/streamwise-frontend/src/app/pages/estatisticas/estatisticas.component.html
+++ b/streamwise-frontend/src/app/pages/estatisticas/estatisticas.component.html
@@ -1,1 +1,13 @@
-<p>estatisticas works!</p>
+<div class="container">
+    <h2>Estatisticas</h2>
+    <div class="stats-cards">
+        <div class="stat-card">
+            <h3>Total de gastos dos servicos</h3>
+            <p> {{gastosTotais}} </p>
+        </div>
+        <div class="stat-card">
+            <h3>Total de gastos mensais dos servicos</h3>
+            <p> {{gastosMensais}} </p>
+        </div>
+    </div>
+</div>
