feat: implementa event emiter para atualizar o estatisticas component automaticamente

--- a/streamwise-frontend/src/app/pages/home/home.component.html
+++ b/streamwise-frontend/src/app/pages/home/home.component.html
@@ -20,6 +20,6 @@
 
 
 <section>
-    <app-card></app-card>
-    <app-estatisticas></app-estatisticas>
+    <app-card (signaturesUpdated)="atualizarEstatisticas()"></app-card>
+    <app-estatisticas #estatisticas></app-estatisticas>
 </section>
