refactor: altera botao footer do campo de servilo de adicionar assintura para adicionar servico

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -166,7 +166,7 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Cancelar</button>
         <button type="button" class="btn btn-primary" (click)="isEditMode ? editSignature() : addSignature()">
-            {{ isEditMode ? 'Salvar Alterações' : 'Adicionar Assinatura' }}
+            {{ isEditMode ? 'Salvar Alterações' : 'Adicionar Servico' }}
         </button>
     </div>
 </ng-template>
