refactor: remove tag disabled do botao de criar servico

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -57,10 +57,7 @@
             </div>
 
             <div class="button-box">
-            <button (click)="openModal(contentServico)" 
-                [disabled]="servicesDisabled"
-                [ngClass]="{'disabled-button' : servicesDisabled }"
-            class="btn-two">
+            <button (click)="openModal(contentServico)" class="btn-two">
                 <img src="assets/Calendario.svg">
                 <p>SERVICOS</p>
             </button>
